--- a/jenkinsfile
+++ b/jenkinsfile
@@ -3,7 +3,7 @@ pipeline {
   stages {
     stage ("build") {
       steps {
-        step {
+        script {
           echo "Hi this is reddy from devops team"
           }
         }
