--- a/jenkinsfile
+++ b/jenkinsfile
@@ -4,7 +4,7 @@ pipeline {
     stage ("build") {
       steps {
         script {
-          echo "Hi this is reddy from devops team"
+          println "Hi this is reddy from devops team"
           }
         }
       }
